--- a/src/app/human-practice-section/human-practice-section.component.html
+++ b/src/app/human-practice-section/human-practice-section.component.html
@@ -5,6 +5,17 @@
 </div>
 
   <mat-card class="dashboard-card" >
+    <div class="titrebloc">
+      <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+      <h1>Overview</h1>
+    </div>
+
+    The impact of chemical pollution of hospital wastewaters is not yet well known. Indeed, there is very little data on the subject. Nevertheless, this remains an important social issue because the molecules present in the wastewater can eventually end up in the water that is drunk at the tap. We had the opportunity to write a small article that will soon be published to inform the public about our project (ajouter lien, journal au moins)
+    We decided to combine the opinion of the public, specialized doctors and scientists through adapted surveys.
+
+    We also sought to apprehend the legislation on the subject in order to build our project in legality. For this we contacted and interviewed a lawyer. As our project is using GMOs, it is important to respect European and French standards concerning the use of modified bacteria.
+
+    Our project may also interest industries specialized in water treatment because it is a simple system to set up, inexpensive and broad spectrum which is of a real industrial interest.
 
   </mat-card>
 
