--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -20,7 +20,10 @@
 <mat-card class="dashboard-card largemargin">
 
 
-    <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Abstract</h1>   </div>
+    <div class="titrebloc">
+      <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+      <h1>Abstract</h1>
+    </div>
 
   <p>Cytotoxic anticancer drugs are among harmful chemicals found in hospital wastewater at high concentration. Physical
     and chemical degradation methods exist but are often inefficient, unsustainable or expensive. We propose
