--- a/src/app/attribution/attribution.component.html
+++ b/src/app/attribution/attribution.component.html
@@ -1,4 +1,4 @@
-<div class="bannercontainer" >
+<div class="bannercontainer">
   <img src="http://2018.igem.org/wiki/images/0/03/T--GO_Paris-Saclay--fond_groupe.png"
        class="bannerimg superposedbanner1">
   <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png"
@@ -21,7 +21,9 @@
   </p>
   <p class="spacemaker"></p>
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Advisors and Researcher</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Advisors and Researcher</h1></div>
 
   <div class="personcontainer">
     <div class="sideportrait">
@@ -108,7 +110,8 @@
     <h2>Mahnaz Sabeti-Azad</h2>
 
     <p>
-      PhD student at Paris-Sud University. She was our lab supervisor for a whole month during summer wet lab experiment.
+      PhD student at Paris-Sud University. She was our lab supervisor for a whole month during summer wet lab
+      experiment.
       She was a huge help in the lab. Creating priorities, dividing the tasks, guiding us through the experimentation,
       it was a fun time to be there in the lab with Mahnaz. </p>
   </div>
@@ -128,7 +131,9 @@
   </div>
   <p class="spacemaker"></p>
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Team Member</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Team Member</h1></div>
 
   <h2>BRIAND William</h2>
   <p>Clear presentation, he showed us the 3 simple steps of the MTX degradation. William spent 1 month in the lab trying
@@ -173,8 +178,9 @@
     meetup. Arthur also realised interviews for the human practice part of the project
   </p>
   <h2>ROJAHN Julie</h2>
-  <p>She was in charge of several parts of the project. Julie spent 3 weeks in the lab focus on differents parts of the
-    project. She also worked on the human practice part.
+  <p>More a chemist than a biologist, Julie spent 3 weeks in the lab focused on different parts of the project. Always
+    joyful, she tried her best to help the team as she could. Julie worked a lot on the human practices, developing
+    different surveys and interviewing researchers and the lawyer.
   </p>
   <h2>ZHU Yueying</h2>
   <p>She was invested on very special part of the project in the lab such as the “Lee5 GFP”. She took the responsibility
@@ -183,7 +189,6 @@
   </p>
 
   <p class="spacemaker"></p>
-
 
 
 </mat-card>
