--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -1,21 +1,21 @@
-<div class="bannercontainer">
+<!--<div class="bannercontainer">
   <img src="http://2018.igem.org/wiki/images/1/1b/T--GO_Paris-Saclay--tableau_banner.png" class="bannerimg superposedbanner1">
   <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png" class="bannerimg superposedbanner2">
   <div class="headlinetext">Methotrexate&nbsp;Degradation</div>
 </div>
-<!--
+-->
+
 <div class="bannercontainer">
-  <video width="1200" height="600" class="bannerimg superposedbanner1" loop="true" autoplay="true" muted="true">
-    <source src="http://2018.igem.org/wiki/images/2/22/T--GO_Paris-Saclay--export_cell.mov" type="video/quicktime" >
+  <video width="1200" class="bannerimg superposedbanner1" loop="true" autoplay="true" muted="true" style="margin-top: 00px;">
+    <source src="http://2018.igem.org/wiki/images/d/db/T--GO_Paris-Saclay--bacteria_anim.mp4" type="video/mp4" >
     Your browser does not support the video tag.
   </video>
 
- img src="http://2018.igem.org/wiki/images/8/89/T--GO_Paris-Saclay--topbanner_nocartouche.png"
+ <img src="http://2018.igem.org/wiki/images/8/89/T--GO_Paris-Saclay--topbanner_nocartouche.png"
        class="bannerimg superposedbanner2">
   <div class="headlinetextbottom">Project&nbsp;Summary</div>
 </div>
 
--->
 
 <mat-card class="dashboard-card largemargin">
 
@@ -72,7 +72,7 @@
   </p>
 
   <p>
-    As proof of concept, we decided to focus on methotrexate (MTX), one of the most used anti-cancer drugs used, found
+    As proof of concept, we decided to focus on methotrexate (MTX), one of the most used anti-cancer drugs, found
     in high
     concentration in untreated hospital wastewater. As a folate analog, MTX acts as a chemotherapeutic drug by
     inhibiting
